fix image gaps in footer

--- a/style.css
+++ b/style.css
@@ -1125,6 +1125,6 @@
 }
 
 .hanuman-image {
-    margin-bottom: -4%;
+    margin-bottom: -5%;
     margin-left: 20%;
 }
